# miniagent-python

./: .coverage  .coveragerc  .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_FINAL_REPORT.md  PERFORMANCE_OPTIMIZATION_FIX_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_TASKS.md  README.md  config.defaults.json  pyproject.toml  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase456.py  verify_phase78.py
.github/workflows/: ci.yml  perf-smoke.yml
docs/: API_USAGE.md  ARCHITECTURE.md  CHANNEL_BINDING.md  CLI.md  CONTRIBUTING.md  CONTROL_THEORY.md  CYBERNETICS_PLAN.md  DEPLOYMENT.md  ENGINEERING.md  ENV_REFERENCE.md  EVALUATION_LOCAL.md  EXTENSION_GUIDE.md  FEISHU.md  FEISHU_CARD_V2_SPIKE.md  FEISHU_TOOLS_REFERENCE.md  INDEX.md  INSTANCE_REGISTRY.md  KNOWLEDGE_BASE.md  LLM_PROVIDERS.md  MEMORY_SYSTEM.md  MIGRATION.md  OUTPUT_FORMAT.md  PERFORMANCE.md  PERFORMANCE_AUDIT.md  PERFORMANCE_GUIDE.md  PROMPT_GUIDELINES.md  RAG_ENHANCEMENT_PLAN.md  SECURITY.md  SELF_OPT.md  TEST_COVERAGE_MATRIX.md  TROUBLESHOOTING.md  USER_GUIDE.md  architecture.drawio  docstring_inventory.md  performance-audit.json  self-audit-and-test-plan.md
docs/examples/: README.md  config.example.json  env.example.txt  sample-external-config.fragment.json
miniagent/: __init__.py  __main__.py  compat.py  config.defaults.json
miniagent/agent/: __init__.py  activity.py  agent.py  agent_defaults.py  agent_display.py  config.py  confirmation_channel.py  constants.py  context.py  debug.py  defaults.py  events.py  execution_prompts.py  execution_runtime_setup.py  execution_setup.py  execution_tools.py  execution_turn.py  executor.py  extensions.py  ground_truth.py  history.py  knowledge.py  lifecycle.py  llm_json.py  llm_params.py  logging.py  loop_detector.py  memory_format.py  monitor.py  observability.py  pipeline.py  plan_utils.py  planner.py  planner_support.py  problem_solver.py  rag.py  request_payload.py  requirement_clarifier.py  runtime.py  session_keys.py  (+8 more)
miniagent/application/: __init__.py
miniagent/assistant/: __init__.py  app.py  composition.py  runner.py  spec.py
miniagent/bootstrap/: __init__.py  application.py  entrypoint.py  lifecycle.py  runtime_services.py  task_service.py
miniagent/cli/: __init__.py  cli.py
miniagent/contracts/: __init__.py  channels.py  configuration.py  llm.py  memory.py  messages.py  messaging.py  runtime.py
miniagent/core/: __init__.py  _openai_compat.py  adaptive_policy.py  agent.py  agent_defaults.py  agent_display.py  config.py  confirmation_channel.py  constants.py  execution_intent.py  execution_prompts.py  execution_runtime_setup.py  execution_setup.py  execution_stream.py  execution_tools.py  execution_turn.py  executor.py  feedback_controller.py  llm_capabilities.py  llm_json.py  llm_params.py  llm_transport.py  llm_transport_models.py  openai_client.py  openai_message_sanitize.py  pipeline.py  plan_utils.py  planner.py  planner_support.py  problem_solver.py  request_payload.py  requirement_clarifier.py  state_observer.py  task_classifier.py  thinking_callback.py  thinking_presets.py
miniagent/engine/: __init__.py  background_inbound.py  background_tasks.py  bg_session_cleanup.py  btw_cmd.py  builtin_tools.py  cli_commands.py  cli_completion.py  cli_fallback.py  cli_files.py  cli_format.py  cli_history.py  cli_inbound.py  cli_outbound.py  cli_shell.py  cli_state.py  cli_transcript.py  cli_tui.py  cli_tui_app.py  cli_tui_appenders.py  cli_tui_controls.py  cli_tui_keybindings.py  cli_tui_output.py  cli_tui_transcript_ops.py  cli_tui_turn.py  clipboard.py  command_dispatch.py  config_cmd.py  doctor.py  engine.py  feishu_handler.py  feishu_lifecycle.py  feishu_runtime.py  feishu_state.py  init.py  main.py  markdown_cli.py  model_cmd.py  parallel_config.py  session_continue.py  (+7 more)
miniagent/feishu/: __init__.py  _utils.py  agent_channel_prompts.py  agent_handler.py  card_rendering.py  docx_blocks.py  docx_client.py  drive_client.py  drive_extra.py  feishu_dedup.py  feishu_tool_policy.py  folder_token_resolve.py  im_send.py  im_tool_policy.py  inbound_adapter.py  lark_client.py  lark_response.py  message_debounce.py  outbound_adapter.py  outbound_delivery.py  patch_queue.py  poll_server.py  poll_state.py  receive_id.py  resource_io.py  server.py  thinking_delivery.py  (+6 more)
scripts/: README.md  audit_docs.py  bootstrap_clawhub_skills.py  check_architecture.py  check_current_version.py  check_docs.py  check_wheel_resources.py  compare_perf_snapshots.py  convert_env_to_json.py  docstring_inventory.py  perf_profile_tracemalloc.py  perf_stability_soak.py  perf_trace_overhead.py  perf_trace_real_api.py  performance_audit.py  vendor_skill_from_github.py  verify_optimizations_simple.py  verify_perf_opt.py  verify_performance_optimizations.py  verify_scroll_fix.py
src/: __init__.py  __main__.py  unified.py
tests/: README.md  __init__.py  channel_helpers.py  config_helpers.py  conftest.py  executor_helpers.py  history_helpers.py  llm_helpers.py  memory_helpers.py  mock_strategies.py  perf_helpers.py  scheduled_tasks_helpers.py  test_activity_log.py  test_adaptive_policy.py  test_agent_announce_difficulty_plan.py  test_agent_api_parity.py  test_agent_improvements.py  test_agent_plan_format.py  test_agent_planner_max_turns.py  test_agent_run_result.py  test_agent_task_classifier_integration.py  test_all_skills.py  test_application_container.py  test_architecture_rules.py  test_atomic_json.py  test_background_inbound.py  test_background_tasks.py  test_basic_commands.py  test_bg_session_cleanup.py  test_bg_session_cleanup_extended.py  test_bitable_client_contract.py  test_bootstrap_lifecycle.py  test_bootstrap_task_service.py  test_browser_pool.py  test_btw_cmd.py  test_builtin_tools_registration.py  test_channel_registry.py  test_channel_router_persist.py  test_check_docs.py  test_clawhub_client_contract.py  (+308 more)
workspaces/: config.user.json.example  feishu_inbound_owner.json  keyword-index.json
(+858 files in other folders)
