[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent-python"
dynamic = ["version"]
description = "A minimal LLM agent with two-phase planning, skill system, self-optimization, and Feishu integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "yingzhudashu"}
]
keywords = ["llm", "agent", "react", "tool-calling", "feishu"]

dependencies = [
    "openai>=1.0.0",
    "tzdata>=2024.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
feishu = [
    "lark-oapi>=1.4.0",
]
browser = [
    "playwright>=1.40.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
miniagent = "miniagent.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "miniagent.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["miniagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "dot_help_dispatch: real dispatch_command path for .help (filter with -m 'not dot_help_dispatch' to skip)",
    "evaluation: tests under tests/evaluation (often network/API; default CI uses -m 'not evaluation')",
    "perf: synthetic local performance smoke (see docs/PERFORMANCE.md)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["miniagent", "tests"]
