[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent-python"
dynamic = ["version"]
description = "A minimal LLM agent with two-phase planning, skill system, self-optimization, and Feishu integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "yingzhudashu"}
]
keywords = ["llm", "agent", "react", "tool-calling", "feishu"]

dependencies = [
    "openai>=1.0.0",
    "croniter>=2.0.0",
    "tzdata>=2024.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
feishu = [
    "lark-oapi>=1.4.0",
]
browser = [
    "playwright>=1.40.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
typing = [
    "mypy>=1.8.0",
]

[project.scripts]
miniagent = "miniagent.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "miniagent.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["miniagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "dot_help_dispatch: real dispatch_command path for .help (filter with -m 'not dot_help_dispatch' to skip)",
    "evaluation: tests under tests/evaluation (often network/API; default CI uses -m 'not evaluation')",
    "perf: synthetic local performance smoke (see docs/PERFORMANCE.md)",
]
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["miniagent", "tests"]

[tool.ruff.lint]
# 渐进启用：语法/未定义名/导入顺序/pyupgrade（UP）；行长由上方 line-length 与 formatter 约束，不单开 E501 门禁
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E402"]  # 部分模块需在 import 前改 sys.path / 环境，保留延后 import

[tool.ruff.lint.isort]
known-first-party = ["miniagent"]

# 可选渐进类型检查：默认仅作配置占位；本地建议先对单个子包跑：
#   pip install -e ".[dev,typing]" && python -m mypy miniagent/types
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
show_error_codes = true
