[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent-python"
dynamic = ["version"]
description = "A minimal LLM agent with two-phase planning, skill system, self-optimization, and Feishu integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "yingzhudashu"}
]
keywords = ["llm", "agent", "react", "tool-calling", "feishu"]

dependencies = [
    "openai>=1.0.0",
    "croniter>=2.0.0",
    "tzdata>=2024.1",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
feishu = [
    "lark-oapi>=1.4.0",
    "mistune>=3.0.0",
    "websockets>=12.0,<14",
]
browser = [
    "playwright>=1.40.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "build>=1.0.0",
    "bandit>=1.7.0",
    "diff-cover>=9.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
typing = [
    "mypy>=1.8.0",
]
perf = [
    "psutil>=5.9.0",
]

[project.scripts]
miniagent = "miniagent.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "miniagent.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["miniagent*"]

[tool.setuptools.package-data]
"miniagent.resources" = ["*.json"]
"miniagent.skills" = [
    "templates/**/*.md",
    "templates/**/*.json",
    "templates/**/*.html",
    "templates/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "dot_help_dispatch: real dispatch_command path for .help",
    "evaluation: tests under tests/evaluation (often network/API)",
    "perf: synthetic local performance smoke",
    "slow: tests taking >5 seconds",
]
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["miniagent", "tests"]

[tool.ruff.lint]
# 渐进启用：语法/未定义名/导入顺序/pyupgrade（UP）；行长由上方 line-length 与 formatter 约束，不单开 E501 门禁
select = [
    "E4", "E7", "E9", "F", "I", "UP", "B", "C90",
    "ASYNC100", "ASYNC109", "ASYNC110", "ASYNC115", "ASYNC116",
    "ASYNC210", "ASYNC220", "ASYNC221", "ASYNC222", "ASYNC250",
    "PERF101", "PERF102", "PERF403",
]
ignore = ["E402"]  # 部分模块需在 import 前改 sys.path / 环境，保留延后 import

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["miniagent"]

# 全包类型门禁；可选 SDK 由本地 Protocol/适配器隔离。
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
explicit_package_bases = true
show_error_codes = true
check_untyped_defs = true
